fix for banners in price list as they were being overlapped by learn more button on mobile devices. also fix to the facebook banner not staying within its container on mobile device causing user to scroll across instead of up and down to see. deleted some css that was no longer in use and not needed

--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -144,15 +144,6 @@ orange
 
               }
 
-.fb-banner{
-  position: relative;
-  width: 100%;
-  margin: 0 30%
-}
-@media(max-width:600px){
-  .fb-banner{
-      margin: 0 20%;}
-  }
 
 /* =====   Peter Sefton About Page   ===== */
 
